--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container"
-    tools:context="android.code.wing.baseapp.MainActivity"
+    tools:context="com.code.wing.baseapp.MainActivity"
     tools:deviceIds="wear">
 
     <TextView
